--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.FullScreenButton {
+  box-shadow: none;
+  border-color: transparent;
+  background-color: transparent;
+}
