--- a/src/flip.css
+++ b/src/flip.css
@@ -1,8 +1,7 @@
 .tick {
-    font-size:1rem; 
-    white-space:nowrap; 
-/*    font-family:arial,sans-serif;
-*/
+    font-size:1rem;
+    white-space:nowrap;
+    font-family:arial,sans-serif;
 }
 .tick-flip,.tick-text-inline {
   font-size:3em;
@@ -34,21 +33,21 @@
     text-align:center;
 }
 .tick-text-inline {
-    color: rgb(190, 193, 199) !important; 
+    color: rgb(190, 193, 199) !important;
 }
 .tick-label {
-    color: rgb(90, 93, 99) !important; 
+    color: rgb(90, 93, 99) !important;
 }
 .tick-flip-panel {
-    color: rgb(255, 255, 255); 
-    background-color: rgb(59, 61, 59); 
+    color: rgb(255, 255, 255);
+    background-color: rgb(59, 61, 59);
     font-weight: normal;
 }
 .tick-flip-panel-text-wrapper {
-    line-height: 1.45 !important; 
+    line-height: 1.45 !important;
 }
 .tick-flip {
-    border-radius:0.12em !important; 
+    border-radius:0.12em !important;
 }
 /* rounder corners */
 #flip-date {
