Adjusted visual appearance

--- a/src/text.css
+++ b/src/text.css
@@ -60,7 +60,7 @@
 
 .outline-temp {
     font: Tahoma, Geneva, sans-serif;
-    font-size: 128px;
+    // font-size: 128px;
     // line-height: 1.1em;
     /* color: dodgerblue; */
     text-shadow:
