--- a/src/css/Text.module.css
+++ b/src/css/Text.module.css
@@ -1,42 +1,72 @@
 .outlineXl {
-    font: Tahoma, Geneva, sans-serif;
-    /* font-size: 128px; */
-    line-height: 1.1em;
-    /* color: dodgerblue; */
-    text-shadow:
+  /* font-size: 128px; */
+  line-height: 1.1em;
+  /* color: dodgerblue; */
+  text-shadow:
     /* Outline 1 */
-      -1px -1px 0 Black,
-      1px -1px 0 Black,
-      -1px 1px 0 Black,
-      1px 1px 0 Black,
-      -2px 0 0 Black,
-      2px 0 0 Black,
-      0 2px 0 Black,
-      0 -2px 0 Black,
+    -1px -1px 0 Black,
+    1px -1px 0 Black,
+    -1px 1px 0 Black,
+    1px 1px 0 Black,
+    -2px 0 0 Black,
+    2px 0 0 Black,
+    0 2px 0 Black,
+    0 -2px 0 Black,
     /* Outline 2 */
-      -2px -2px 0 DarkBlue,
-      2px -2px 0 DarkBlue,
-      -2px 2px 0 DarkBlue,
-      2px 2px 0 DarkBlue,
-      -3px 0 0 DarkBlue,
-      3px 0 0 DarkBlue,
-      0 3px 0 DarkBlue,
-      0 -3px 0 DarkBlue; /* Terminate with a semi-colon */
+    -2px -2px 0 DarkBlue,
+    2px -2px 0 DarkBlue,
+    -2px 2px 0 DarkBlue,
+    2px 2px 0 DarkBlue,
+    -3px 0 0 DarkBlue,
+    3px 0 0 DarkBlue,
+    0 3px 0 DarkBlue,
+    0 -3px 0 DarkBlue; /* Terminate with a semi-colon */
+}
+
+.outlineLg {
+  font-size: 36px;
+  line-height: 1.2em;
+  color: white;
+  white-space: pre-wrap;
+  text-shadow:
+    /* Outline 1 */
+    -1px -1px 0 Black,
+    1px -1px 0 Black,
+    -1px 1px 0 Black,
+    1px 1px 0 Black,
+    -2px 0 0 Black,
+    2px 0 0 Black,
+    0 2px 0 Black,
+    0 -2px 0 Black,
+    /* Outline 2 */
+    -2px -2px 0 DarkBlue,
+    2px -2px 0 DarkBlue,
+    -2px 2px 0 DarkBlue,
+    2px 2px 0 DarkBlue,
+    -3px 0 0 DarkBlue,
+    3px 0 0 DarkBlue,
+    0 3px 0 DarkBlue,
+    0 -3px 0 DarkBlue; /* Terminate with a semi-colon */
 }
 
 .outlineSm {
-    font: Tahoma, Geneva, sans-serif;
-    /* font-size: 28px;
-    color: gold; */
-    line-height: 1.1em;
-    text-shadow:
+  /* font-size: 28px;
+  color: gold; */
+  line-height: 1.1em;
+  text-shadow:
     /* Outline 1 */
-        -1px -1px 0 Black,
-        1px -1px 0 Black,
-        -1px 1px 0 Black,
-        1px 1px 0 Black,
-        -2px 0 0 Black,
-        2px 0 0 Black,
-        0 2px 0 Black,
-        0 -2px 0 Black;
+    -1px -1px 0 Black,
+    1px -1px 0 Black,
+    -1px 1px 0 Black,
+    1px 1px 0 Black,
+    -2px 0 0 Black,
+    2px 0 0 Black,
+    0 2px 0 Black,
+    0 -2px 0 Black;
+}
+
+.historyButton {
+  color: dodgerblue;
+  font-weight: 500;
+  font-size: var(--mantine-h3-font-size);
 }
