--- a/src/css/Text.module.css
+++ b/src/css/Text.module.css
@@ -1,4 +1,4 @@
-.outlineXl {
+.outlineDouble {
   /* font-size: 128px; */
   line-height: 1.1em;
   /* color: dodgerblue; */
@@ -23,7 +23,7 @@
     0 -3px 0 DarkBlue; /* Terminate with a semi-colon */
 }
 
-.outlineLg {
+.outlineHeader {
   font-size: 36px;
   line-height: 1.2em;
   color: white;
@@ -49,7 +49,7 @@
     0 -3px 0 DarkBlue; /* Terminate with a semi-colon */
 }
 
-.outlineSm {
+.outlineSingle {
   /* font-size: 28px;
   color: gold; */
   line-height: 1.1em;
